[tool.poetry]
name = "streamlit_pages"
version = "0.1.0"
description = ""
authors = ["Frank Cao <franktcao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.21.0"
streamlit = "^1.8.1"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"